--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.shoper.x-job</groupId>
     <artifactId>x-job</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>x-job</name>
     <description>Demo project for Spring Boot</description>
