建立基础任务模型

--- a/xjob-scheduler/pom.xml
+++ b/xjob-scheduler/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>xjob-scheduler</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
+    </dependencies>
 </project>
