--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <module>xjob-scheduler</module>
         <module>xjob-container</module>
         <module>xjob-task</module>
+        <module>x-job-commons</module>
+        <module>xjob-commons</module>
     </modules>
     <packaging>pom</packaging>
     <name>x-job</name>
