--- a/xjob-executor/pom.xml
+++ b/xjob-executor/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>xjob-executor</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>test</module>
+    </modules>
 
 
 </project>
