--- a/xjob-util/xjob-util-log/pom.xml
+++ b/xjob-util/xjob-util-log/pom.xml
@@ -3,13 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>x-job</artifactId>
+        <artifactId>xjob-util</artifactId>
         <groupId>org.x.job</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xjob-commons</artifactId>
+    <artifactId>xjob-util-log</artifactId>
 
-
+    <modules>
+        <module>log-util</module>
+        <module>log-api</module>
+    </modules>
 </project>
