--- a/xjob-registry/pom.xml
+++ b/xjob-registry/pom.xml
@@ -2,14 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
+        <groupId>org.shoper.x-job</groupId>
         <artifactId>x-job</artifactId>
-        <groupId>org.x.job</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>xjob-commons</artifactId>
-
+    <artifactId>xjob-registry</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>xjob-registry-zookeeper</module>
+        <module>xjob-registry-zookeeper-client</module>
+    </modules>
 
 </project>
