有错误先提交- -回去修改

--- a/xjob-util/pom.xml
+++ b/xjob-util/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>xjob-util</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>xjob-util-zookeeper</module>
+        <!--<module>xjob-util-zookeeper</module>-->
         <module>xjob-util-log</module>
     </modules>
 
