--- a/xjob-util/xjob-util-log/log-util/pom.xml
+++ b/xjob-util/xjob-util-log/log-util/pom.xml
@@ -11,10 +11,10 @@
     </parent>
     <packaging>jar</packaging>
     <dependencies>
-        <dependency>
-            <groupId>com.daqsoft.commons</groupId>
-            <artifactId>commons-core</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.daqsoft.commons</groupId>-->
+            <!--<artifactId>commons-core</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -29,11 +29,11 @@
             <artifactId>jyaml</artifactId>
             <version>1.3</version>
         </dependency>
-        <dependency>
-            <groupId>com.daqsoft.log</groupId>
-            <artifactId>log-config-kafka-api</artifactId>
-            <version>0.0.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.daqsoft.log</groupId>-->
+            <!--<artifactId>log-config-kafka-api</artifactId>-->
+            <!--<version>0.0.1</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka_2.12</artifactId>
@@ -52,7 +52,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.daqsoft.log</groupId>
+            <groupId>org.x.job</groupId>
             <artifactId>log-api</artifactId>
             <version>${project.version}</version>
         </dependency>
