--- a/xjob-util/xjob-util-log/pom.xml
+++ b/xjob-util/xjob-util-log/pom.xml
@@ -8,9 +8,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>xjob-util-log</artifactId>
-
+    <packaging>pom</packaging>
     <modules>
         <module>log-util</module>
         <module>log-api</module>
