--- a/xjob-util/xjob-util-zookeeper/pom.xml
+++ b/xjob-util/xjob-util-zookeeper/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>xjob-util-zookeeper</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.daqsoft.log</groupId>
+            <artifactId>log-util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
