--- a/xjob-util/xjob-util-log/log-util/pom.xml
+++ b/xjob-util/xjob-util-log/log-util/pom.xml
@@ -7,32 +7,34 @@
     <parent>
         <artifactId>xjob-util-log</artifactId>
         <groupId>org.x.job</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <packaging>jar</packaging>
     <dependencies>
         <!--<dependency>-->
-            <!--<groupId>com.daqsoft.commons</groupId>-->
-            <!--<artifactId>commons-core</artifactId>-->
+        <!--<groupId>com.daqsoft.commons</groupId>-->
+        <!--<artifactId>commons-core</artifactId>-->
         <!--</dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.8.8</version>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>com.daqsoft.commons</groupId>-->
-        <!--<artifactId>commons-feign</artifactId>-->
-        <!--</dependency>-->
+
+        <dependency>
+            <groupId>org.shoper.commons</groupId>
+            <artifactId>commons-feign</artifactId>
+            <version>0.0.1</version>
+        </dependency>
         <dependency>
             <groupId>org.jyaml</groupId>
             <artifactId>jyaml</artifactId>
             <version>1.3</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>com.daqsoft.log</groupId>-->
-            <!--<artifactId>log-config-kafka-api</artifactId>-->
-            <!--<version>0.0.1</version>-->
+        <!--<groupId>com.daqsoft.log</groupId>-->
+        <!--<artifactId>log-config-kafka-api</artifactId>-->
+        <!--<version>0.0.1</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.apache.kafka</groupId>
@@ -46,15 +48,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.x.job</groupId>
             <artifactId>log-api</artifactId>
-            <version>${project.version}</version>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 </project>
