--- a/xjob-util/xjob-util-log/pom.xml
+++ b/xjob-util/xjob-util-log/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>xjob-util</artifactId>
         <groupId>org.x.job</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>xjob-util-log</artifactId>
@@ -14,4 +14,11 @@
         <module>log-util</module>
         <module>log-api</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.shoper.commons</groupId>
+            <artifactId>commons-core</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+    </dependencies>
 </project>
