--- a/xjob-scheduler/pom.xml
+++ b/xjob-scheduler/pom.xml
@@ -28,5 +28,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-zookeeper-discovery</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.x.job</groupId>
+            <artifactId>xjob-util-zookeeper</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 </project>
