--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
-    <pluginRepositories>repository
+    <pluginRepositories>
         <pluginRepository>
             <id>ShawnShoper</id>
             <name>ShawnShoper Repository</name>
