--- a/xjob-scheduler/xjob-scheduler-executor-discovery/pom.xml
+++ b/xjob-scheduler/xjob-scheduler-executor-discovery/pom.xml
@@ -3,29 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>x-job</artifactId>
+        <artifactId>xjob-scheduler</artifactId>
         <groupId>org.x.job</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xjob-scheduler</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>xjob-scheduler-executor-discovery</module>
-        <module>xjob-scheduler-quartz</module>
-        <module>xjob-scheduler-core</module>
-    </modules>
-
+    <artifactId>xjob-scheduler-executor-discovery</artifactId>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zookeeper-all</artifactId>
