Execute -> master&sender&receiver xjob -> conf module

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>xjob-scheduler</module>
         <module>xjob-commons</module>
         <module>xjob-util</module>
+        <module>xjob-conf</module>
     </modules>
     <packaging>pom</packaging>
     <name>x-job</name>
