--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
         <developer>
             <email>xiehao3692@vip.qq.com</email>
             <name>Shawn Shoper</name>
-            <id>ss</id>
+            <id>ShawnShoper</id>
         </developer>
 
     </developers>
