--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,10 @@
             <name>Shawn Shoper</name>
             <id>ShawnShoper</id>
         </developer>
-
+        <developer>
+            <id>EightMonth</id>
+            <name>Eightmonth</name>
+            <email>eightmonth@qq.com</email>
+        </developer>
     </developers>
 </project>
