--- a/xjob-util/pom.xml
+++ b/xjob-util/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>xjob-util-zookeeper</module>
         <module>xjob-util-log</module>
+        <module>xjob-util-dynamic-compile</module>
     </modules>
 
 
