--- a/xjob-scheduler/xjob-scheduler-core/pom.xml
+++ b/xjob-scheduler/xjob-scheduler-core/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>xjob-scheduler-core</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 </project>
