--- a/xjob-scheduler/pom.xml
+++ b/xjob-scheduler/pom.xml
@@ -15,28 +15,12 @@
         <module>xjob-scheduler-executor-discovery</module>
         <module>xjob-scheduler-quartz</module>
         <module>xjob-scheduler-core</module>
+        <module>xjob-scheduler-registry</module>
     </modules>
-
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-zookeeper-all</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-zookeeper-discovery</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.x.job</groupId>
-            <artifactId>xjob-util-zookeeper</artifactId>
+            <artifactId>log-util</artifactId>
             <version>0.0.1</version>
         </dependency>
     </dependencies>
