--- a/xjob-scheduler/xjob-scheduler-registry/pom.xml
+++ b/xjob-scheduler/xjob-scheduler-registry/pom.xml
@@ -9,7 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xjob-scheduler-schedule-registry</artifactId>
+    <artifactId>xjob-scheduler-registry</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.x.job</groupId>
+            <artifactId>xjob-util-zookeeper</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+    </dependencies>
 </project>
