--- a/xjob-scheduler/xjob-scheduler-core/pom.xml
+++ b/xjob-scheduler/xjob-scheduler-core/pom.xml
@@ -16,5 +16,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.x.job</groupId>
+            <artifactId>xjob-scheduler-registry</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 </project>
