--- a/xjob-scheduler/xjob-scheduler-registry/pom.xml
+++ b/xjob-scheduler/xjob-scheduler-registry/pom.xml
@@ -17,5 +17,10 @@
             <artifactId>xjob-util-zookeeper</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
