--- a/xjob-executor/pom.xml
+++ b/xjob-executor/pom.xml
@@ -20,7 +20,7 @@
         </dependency>
         <dependency>
             <groupId>org.x.job</groupId>
-            <artifactId>xjob-util</artifactId>
+            <artifactId>log-util</artifactId>
             <version>0.0.1</version>
         </dependency>
         <dependency>
@@ -31,6 +31,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.5.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>1.3.0.RELEASE</version>
         </dependency>
     </dependencies>
 
