--- a/xjob-scheduler/pom.xml
+++ b/xjob-scheduler/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>log-util</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.x.job</groupId>
+            <artifactId>xjob-commons</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 </project>
