--- a/xjob-executor/pom.xml
+++ b/xjob-executor/pom.xml
@@ -24,6 +24,11 @@
             <version>0.0.1</version>
         </dependency>
         <dependency>
+            <groupId>org.x.job</groupId>
+            <artifactId>xjob-util-zookeeper</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.jyaml</groupId>
             <artifactId>jyaml</artifactId>
             <version>1.3</version>
