--- a/xjob-executor/pom.xml
+++ b/xjob-executor/pom.xml
@@ -48,6 +48,11 @@
             <version>1.3.0.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-zookeeper-dependencies</artifactId>
+            <type>pom</type>
+        </dependency>
+        <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
             <version>2.8.2</version>
