--- a/xjob-executor/src/main/resources/application.yml
+++ b/xjob-executor/src/main/resources/application.yml
@@ -1,14 +1,3 @@
-application:
-  name: xjob-executor
-
-  redis:
-    database: 0
-    host: 127.0.0.1
-    port: 6379
-    password:
-    timeout: 0
-    pool:
-      max-active: 8
-      max-wait: -1
-      max-idle: 8
-      min-idle: 0
+spring.application.name: x-job-executor
+spring.cloud.zookeeper:
+  connect-string: localhost:2181
