--- a/xjob-util/xjob-util-dynamic-compile/pom.xml
+++ b/xjob-util/xjob-util-dynamic-compile/pom.xml
@@ -20,5 +20,15 @@
             <groupId>org.shoper.commons</groupId>
             <artifactId>commons-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <systemPath>d:/dev/java/jdk1.8.0_131/lib/tools.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
 </project>
