edit maven dependency property for tools.jar import JDKCompile non-import class

--- a/xjob-util/xjob-util-dynamic-compile/pom.xml
+++ b/xjob-util/xjob-util-dynamic-compile/pom.xml
@@ -23,7 +23,9 @@
         <dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
-            <systemPath>d:/dev/java/jdk1.8.0_131/lib/tools.jar</systemPath>
+            <scope>system</scope>
+            <!--JAVA_HOME config to JDK home-->
+            <systemPath>${env.JAVA_HOME}/lib/tools.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
