--- a/xjob-util/xjob-util-dynamic-compile/pom.xml
+++ b/xjob-util/xjob-util-dynamic-compile/pom.xml
@@ -9,7 +9,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>xjob-util-dynamic-compile</artifactId>
-    <packaging>pom</packaging>
     <dependencies>
         <dependency>
             <groupId>org.x.job</groupId>
@@ -23,6 +22,7 @@
         <dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
+            <version>0.1</version>
             <scope>system</scope>
             <!--JAVA_HOME config to JDK home-->
             <systemPath>${env.JAVA_HOME}/lib/tools.jar</systemPath>
